# hal_openisa

./: CMakeLists.txt
vega_sdk_riscv/: CMakeLists.txt
vega_sdk_riscv/devices/RV32M1/: RV32M1_ri5cy.h
vega_sdk_riscv/devices/RV32M1/drivers/: CMakeLists.txt  fsl_cau3_ble.c  fsl_cau3_ble.h
vega_sdk_riscv/middleware/: CMakeLists.txt
vega_sdk_riscv/middleware/wireless/framework/: CMakeLists.txt
vega_sdk_riscv/middleware/wireless/framework/XCVR/RV32M1/: CMakeLists.txt  dbg_ram_capture.c  dbg_ram_capture.h  fsl_xcvr.c  fsl_xcvr.h  fsl_xcvr_trim.c  fsl_xcvr_trim.h
vega_sdk_riscv/middleware/wireless/framework/XCVR/RV32M1/cfgs_rv32m1/: fsl_xcvr_ant_config.c  fsl_xcvr_ble_config.c  fsl_xcvr_common_config.c  fsl_xcvr_gfsk_bt_0p3_h_0p5_config.c  fsl_xcvr_gfsk_bt_0p5_h_0p32_config.c  fsl_xcvr_gfsk_bt_0p5_h_0p5_config.c  fsl_xcvr_gfsk_bt_0p5_h_0p7_config.c  fsl_xcvr_gfsk_bt_0p5_h_1p0_config.c  fsl_xcvr_gfsk_bt_0p7_h_0p5_config.c  fsl_xcvr_mode_datarate_config.c  fsl_xcvr_msk_config.c  fsl_xcvr_zgbe_config.c
